--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "prepare": "husky",
+    "check-redundancy": "jscpd",
+    "analyze-bundle": "ANALYZE=true npm run build",
+    "quality-check": "npm run lint && npm run check-redundancy && npm run test:run"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.883.0",
@@ -19,6 +26,8 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@sentry/react": "^10.10.0",
+    "@sentry/tracing": "^7.120.4",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +45,10 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.3.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "^8.7.0",
@@ -44,8 +57,15 @@
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "globals": "^16.3.0",
+    "husky": "^9.1.7",
+    "jscpd": "^4.0.5",
+    "jsdom": "^26.1.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
-    "vite": "^5.4.9"
+    "vite": "^5.4.9",
+    "vitest": "^3.2.4",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
