--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@sentry/browser": "^10.10.0",
     "@sentry/react": "^10.10.0",
+    "@sentry/replay": "^7.116.0",
     "@sentry/tracing": "^7.120.4",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
@@ -62,6 +64,7 @@
     "husky": "^9.1.7",
     "jscpd": "^4.0.5",
     "jsdom": "^26.1.0",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3",
     "vite": "^5.4.9",
