--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-router-dom": "^6.26.2",
     "sgs-gita-alumni": "file:",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "web-vitals": "^5.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.8.0",
