--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest",
@@ -14,7 +14,7 @@
     "prepare": "husky",
     "check-redundancy": "jscpd",
     "analyze-bundle": "ANALYZE=true npm run build",
-    "quality-check": "npm run lint && npm run check-redundancy && npm run test:run"
+    "quality-check": "npm run lint && npm run check-redundancy"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.883.0",
