--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "analyze-bundle": "ANALYZE=true npm run build",
     "quality-check": "npm run lint && npm run check-redundancy",
     "validate-docs": "node scripts/validate-documentation-standards.js",
-    "validate-docs-standards": "node scripts/validate-documentation-standards.js"
+    "validate-docs-standards": "node scripts/validate-documentation-standards.js",
+    "validate-deployment": "node scripts/deployment-validation.js"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.883.0",
