Complete remaining work: Security features, Dashboard API, Cross-platform optimization

--- a/package.json
+++ b/package.json
@@ -11,6 +11,19 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:api": "playwright test tests/api/",
+    "test:auth": "playwright test tests/e2e/auth.spec.ts",
+    "test:dashboard": "playwright test tests/e2e/dashboard.spec.ts",
+    "test:responsive": "playwright test tests/e2e/responsive.spec.ts",
+    "test:cross-browser": "playwright test tests/e2e/cross-browser.spec.ts",
+    "test:performance": "playwright test tests/e2e/performance.spec.ts",
+    "test:all": "npm run test:run && npm run test:e2e",
+    "test:ci": "playwright test --reporter=html",
+    "test:report": "playwright show-report",
     "prepare": "husky",
     "check-redundancy": "jscpd",
     "analyze-bundle": "ANALYZE=true npm run build",
@@ -38,11 +51,13 @@
     "@sentry/replay": "^7.116.0",
     "@sentry/tracing": "^7.120.4",
     "@tanstack/react-table": "^8.20.5",
+    "@types/dompurify": "^3.0.5",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "dompurify": "^3.2.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "lucide-react": "^0.441.0",
@@ -56,6 +71,7 @@
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.40.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
