Implement API integration foundation with comprehensive testing and UI updates

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "test:unit": "vitest run --coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
@@ -22,8 +23,56 @@
     "test:cross-browser": "playwright test tests/e2e/cross-browser.spec.ts",
     "test:performance": "playwright test tests/e2e/performance.spec.ts",
     "test:all": "npm run test:run && npm run test:e2e",
+    "test:comprehensive": "node scripts/test-runner.js all --report",
+    "test:quick": "node scripts/test-runner.js unit e2e",
     "test:ci": "playwright test --reporter=html",
     "test:report": "playwright show-report",
+    "test:allure": "allure generate test-results/allure-results --clean && allure open",
+    "test:json": "playwright test --reporter=json",
+    "test:junit": "playwright test --reporter=junit",
+    "test:clear": "rm -rf test-results/ && rm -rf coverage/",
+    "test:db:check": "node scripts/check-database.js",
+    "test:db:reset": "node scripts/reset-test-database.js",
+    "test:db:seed": "node scripts/seed-test-data.js",
+    "test:security": "playwright test tests/e2e/security.spec.ts",
+    "test:accessibility": "playwright test tests/e2e/accessibility.spec.ts",
+    "test:mobile": "playwright test --project='Mobile Chrome' --project='Mobile Safari'",
+    "test:tablet": "playwright test --project='iPad' --project='iPad Pro'",
+    "test:desktop": "playwright test --project=chromium --project=firefox --project=webkit",
+    "test:load": "playwright test tests/e2e/load.spec.ts",
+    "test:stress": "playwright test tests/e2e/stress.spec.ts",
+    "test:smoke": "playwright test tests/e2e/smoke.spec.ts",
+    "test:regression": "npm run test:all && npm run test:performance",
+    "test:coverage": "vitest run --coverage && playwright test --reporter=html",
+    "test:watch": "vitest --watch",
+    "test:debug": "playwright test --debug",
+    "test:headed": "playwright test --headed",
+    "test:chrome": "playwright test --project=chromium",
+    "test:firefox": "playwright test --project=firefox",
+    "test:safari": "playwright test --project=webkit",
+    "test:edge": "playwright test --project='Microsoft Edge'",
+    "test:install": "playwright install",
+    "test:install-deps": "playwright install-deps",
+    "test:codegen": "playwright codegen",
+    "test:trace": "playwright show-trace",
+    "test:ui-mode": "playwright test --ui",
+    "test:update-snapshots": "playwright test --update-snapshots",
+    "test:grep": "playwright test --grep",
+    "test:grep-invert": "playwright test --grep-invert",
+    "test:max-failures": "playwright test --max-failures",
+    "test:retries": "playwright test --retries",
+    "test:timeout": "playwright test --timeout",
+    "test:workers": "playwright test --workers",
+    "test:reporter": "playwright test --reporter",
+    "test:output": "playwright test --output",
+    "test:config": "playwright test --config",
+    "test:project": "playwright test --project",
+    "test:global-timeout": "playwright test --global-timeout",
+    "test:forbid-only": "playwright test --forbid-only",
+    "test:fully-parallel": "playwright test --fully-parallel",
+    "test:shard": "playwright test --shard",
+    "test:list": "playwright test --list",
+    "test:help": "playwright test --help",
     "prepare": "husky",
     "check-redundancy": "jscpd",
     "analyze-bundle": "ANALYZE=true npm run build",
@@ -52,7 +101,9 @@
     "@sentry/tracing": "^7.120.4",
     "@tanstack/react-table": "^8.20.5",
     "@types/dompurify": "^3.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.7.7",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -60,6 +111,7 @@
     "dompurify": "^3.2.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "mysql2": "^3.14.4",
     "react": "^18.3.1",
@@ -68,6 +120,7 @@
     "sgs-gita-alumni": "file:",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^13.0.0",
     "web-vitals": "^5.1.0"
   },
   "devDependencies": {
@@ -81,6 +134,7 @@
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "allure-playwright": "^2.15.1",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
