--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run server\" \"vite\"",
+    "server": "node server.js",
     "build": "npm run detect-mock-data && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -31,9 +32,9 @@
     "test:json": "playwright test --reporter=json",
     "test:junit": "playwright test --reporter=junit",
     "test:clear": "rm -rf test-results/ && rm -rf coverage/",
-    "test:db:check": "node scripts/check-database.js",
-    "test:db:reset": "node scripts/reset-test-database.js",
-    "test:db:seed": "node scripts/seed-test-data.js",
+    "test:db:check": "node scripts/database/test-db.js",
+    "test:db:reset": "echo 'Database reset script not available - use migration scripts in scripts/database/'",
+    "test:db:seed": "echo 'Database seeding not available - use create-admin.js for admin creation'",
     "test:security": "playwright test tests/e2e/security.spec.ts",
     "test:accessibility": "playwright test tests/e2e/accessibility.spec.ts",
     "test:mobile": "playwright test --project='Mobile Chrome' --project='Mobile Safari'",
@@ -134,7 +135,9 @@
     "@typescript-eslint/eslint-plugin": "^8.7.0",
     "@typescript-eslint/parser": "^8.7.0",
     "@vitejs/plugin-react": "^4.3.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "allure-playwright": "^2.15.1",
+    "concurrently": "^9.2.1",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
