--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "test:integration": "npm test -- src/__tests__/integration/",
     "test:unit": "vitest run --coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
@@ -76,8 +77,9 @@
     "test:help": "playwright test --help",
     "prepare": "husky",
     "check-redundancy": "jscpd",
+    "check-integration": "node scripts/check-integration-patterns.js",
     "analyze-bundle": "ANALYZE=true npm run build",
-    "quality-check": "npm run lint && npm run check-redundancy && npm run detect-mock-data",
+    "quality-check": "npm run lint && npm run check-redundancy && npm run check-integration && npm run test:run",
     "validate-docs": "node scripts/validate-documentation-standards.js",
     "validate-docs-standards": "node scripts/validate-documentation-standards.js",
     "validate-deployment": "node scripts/deployment-validation.js",
