--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "concurrently \"npm run server\" \"vite\"",
-    "server": "node server.js",
+    "server": "tsx server.js",
     "build": "npm run detect-mock-data && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
@@ -91,6 +91,8 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.883.0",
     "@aws-sdk/client-kms": "^3.901.0",
+    "@aws-sdk/client-ses": "^3.901.0",
+    "@aws-sdk/client-sns": "^3.901.0",
     "@aws-sdk/lib-dynamodb": "^3.883.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -115,12 +117,15 @@
     "dompurify": "^3.2.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "hi-base32": "^0.5.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "mysql2": "^3.15.1",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
+    "redis": "^5.8.3",
     "sgs-gita-alumni": "file:",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -151,6 +156,7 @@
     "jsdom": "^26.1.0",
     "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.17",
+    "tsx": "^4.20.6",
     "typescript": "^5.6.3",
     "vite": "^5.4.9",
     "vitest": "^3.2.4",
