--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.883.0",
     "@aws-sdk/client-kms": "^3.901.0",
-    "@aws-sdk/client-ses": "^3.901.0",
+    "@aws-sdk/client-ses": "^3.908.0",
     "@aws-sdk/client-sns": "^3.901.0",
     "@aws-sdk/lib-dynamodb": "^3.883.0",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -121,6 +121,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
     "mysql2": "^3.15.1",
+    "nodemailer": "^7.0.9",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
