feat: test automation readiness for Phase 2.2 - environment config, OTPService unit tests, documentation updates, and bug fixes to InvitationSection.tsx and APIService.ts

--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "build": "npm run detect-mock-data && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:integration": "npm test -- src/__tests__/integration/",
-    "test:unit": "vitest run --coverage",
+    "test": "cross-env NODE_ENV=test vitest",
+    "test:ui": "cross-env NODE_ENV=test vitest --ui",
+    "test:run": "cross-env NODE_ENV=test vitest run",
+    "test:integration": "cross-env NODE_ENV=test npm test -- src/__tests__/integration/",
+    "test:unit": "cross-env NODE_ENV=test vitest run --coverage",
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
@@ -147,6 +147,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "allure-playwright": "^2.15.1",
     "concurrently": "^9.2.1",
+    "cross-env": "^7.0.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.12",
