--- a/package.json
+++ b/package.json
@@ -98,8 +98,11 @@
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@sentry/browser": "^10.10.0",
     "@sentry/react": "^10.10.0",
@@ -157,6 +160,7 @@
     "jscpd": "^4.0.5",
     "jsdom": "^26.1.0",
     "rollup-plugin-visualizer": "^6.0.3",
+    "supertest": "^7.1.4",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.6",
     "typescript": "^5.6.3",
