--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "dompurify": "^3.2.7",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.2.1",
     "hi-base32": "^0.5.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.441.0",
