feat: Complete chat system implementation with database fixes
- Fix SQL prepared statement parameter binding issues in getMessages
- Add participant validation and connection cleanup in chatService.js
- Update TypeScript interfaces for UUID string IDs
- Implement comprehensive chat functionality (conversations, messages, reactions)
- Add real-time WebSocket support for chat
- Create integration tests for chat system
- Fix database connection leaks with try-finally blocks
- Update frontend components to handle UUID types correctly
- Add error handling and validation throughout chat system

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "test:e2e": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
+    "test:e2e:slow": "cross-env SLOW_MO=1000 playwright test --headed --workers=1",
     "test:e2e:debug": "playwright test --debug",
+    "test:chat": "playwright test tests/e2e/chat-workflow.spec.ts",
+    "test:chat:slow": "cross-env SLOW_MO=1000 playwright test tests/e2e/chat-workflow.spec.ts --headed --workers=1",
+    "test:chat:debug": "playwright test tests/e2e/chat-workflow.spec.ts --debug",
     "test:api": "playwright test tests/api/",
     "test:auth": "playwright test tests/e2e/auth.spec.ts",
     "test:dashboard": "playwright test tests/e2e/dashboard.spec.ts",
@@ -134,6 +138,8 @@
     "react-router-dom": "^6.26.2",
     "redis": "^5.8.3",
     "sgs-gita-alumni": "file:",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^13.0.0",
