--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"vite\"",
+    "dev": "npm run dev:clean && concurrently \"npm run server\" \"node scripts/core/delayed-vite.js\"",
+    "dev:vite": "timeout /t 2 /nobreak >nul 2>&1 && vite",
+    "dev:clean": "node scripts/core/kill-port.js 3001 5173",
+    "dev:check": "node scripts/core/check-ports.js",
     "server": "cross-env NODE_ENV=development tsx server.js",
     "build": "npm run detect-mock-data && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
