Update routes, components, and validation schemas
- Update alumni and invitations routes with new functionality
- Enhance AdditionalInfoForm component for better UX
- Improve tanstack advanced table component
- Update input validation and security measures
- Refine validation schemas for better data integrity
- Update environment configuration template

--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,11 @@ JWT_REFRESH_EXPIRES_IN=7d
 # Session secret for express-session (if used)
 SESSION_SECRET=your-session-secret-change-this-in-production
 
+# HMAC Token Secret for invitation tokens (256-bit minimum)
+# CRITICAL: Once set, DO NOT change this in production - it will invalidate all existing invitations
+# Generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+INVITATION_TOKEN_SECRET=generate-a-secure-random-64-char-hex-string-here
+
 # ============================================================================
 # OTP CONFIGURATION
 # ============================================================================
