--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:slow": "cross-env SLOW_MO=1000 playwright test --headed --workers=1",
     "test:e2e:debug": "playwright test --debug",
+    "clear-logs": "node -e \"require('node:fs').rmSync('logs/errors.log', { force: true })\"",
     "test:chat": "playwright test tests/e2e/chat-workflow.spec.ts",
     "test:chat:slow": "cross-env SLOW_MO=1000 playwright test tests/e2e/chat-workflow.spec.ts --headed --workers=1",
     "test:chat:debug": "playwright test tests/e2e/chat-workflow.spec.ts --debug",
